--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home</title>
+  <title>Github</title>
   <link rel="stylesheet" href="trash.css">
 </head>
 <body>
